# raytracingo

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt  PointLight.cpp  PointLight.h  basicmaterial.cpp  basicmaterial.h  ishape.cpp  kernel.cu  light.cpp  light.h  main.cpp  materials.h  params.h  plane.cpp  plane.h  primitive.cpp  primitive.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h  sphere.cpp  sphere.h
sutil/: CMakeLists.txt  Camera.cpp  Camera.h  Scene.cpp  Scene.h  Trackball.cpp  Trackball.h  sutil.cpp  sutil.h
